--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "mangapoject",
   "version": "1.0.0",
   "description": "backend para practica codo-a-codo",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node src/app.js"
   },
   "repository": {
     "type": "git",
