--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "mangapoject",
   "version": "1.0.0",
   "description": "backend para practica codo-a-codo",
@@ -24,6 +25,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.10.1"
   }
 }
